--- a/css/films_ClownCried.css
+++ b/css/films_ClownCried.css
@@ -2,7 +2,7 @@
 
 h3 {
 	text-align: center;
-	font-size: 110%;
+	font-size: 130%;
 	color: #E3DFDE;
 }
 
@@ -77,7 +77,6 @@ aside a:focus {
 	'stor';
 	
 	grid-gap: 5px;
-	height: fit-content 100%;
   }
 
   #cover {
@@ -100,8 +99,9 @@ aside a:focus {
  	background: url("../images/img_filmHeader.jpg") ;
 	background-size: cover;
 	padding: 8%;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin-top: -15px;
+	margin-left: -15px;
+	margin-right: -15px;
  }
 
 
@@ -111,7 +111,7 @@ aside a:focus {
 
 	h3 {
 		text-align: center;
-		font-size: 120%;
+		font-size: 150%;
 		color: #E3DFDE;
 	}
 	
@@ -121,6 +121,16 @@ aside a:focus {
 	
 	}
 	
+	#article_header {
+		grid-area: arthe;
+		 background: url("../images/img_filmHeader.jpg") ;
+		background-size: cover;
+		padding: 8%;
+		margin-top: -15px;
+		margin-left: -10px;
+		margin-right: -10px;
+	 }
+
 	aside {
 		align-items: center;
 		display: inline-flex;
@@ -131,12 +141,14 @@ aside a:focus {
 		margin-right: auto;
 	}
 
-	section {
+	.content {
 		display: inline-flex;
 		float: right;
-		width: 80%;
-		margin-left: auto;
-		margin-top: -140px;
+		width: 50%;
+		margin-top: -135px;
+		margin-left: 425px;
+		margin-right: 125px;
+
 	}
 
 	.page {
@@ -146,7 +158,7 @@ aside a:focus {
 		  'stor cov '
 		  'stor info '
 		  'stor info ';
-		 height: fit-content 100%;
+		 height: fit-content ;
 
 	  }
 	  
