--- a/css/general.css
+++ b/css/general.css
@@ -48,7 +48,7 @@ html {
 html{
 	height: 100%;
 	margin: 0;
-	background: linear-gradient(#000000);
+	background: #000000;
 	background-size: inherit;
 
 }	
